examples/llm-cli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llm-cli
  template:
    metadata:
      labels:
        app: llm-cli
    spec:
      containers:
      - name: llm-cli
        image: premai/llm-cli
        stdin: true
        tty: true
        volumeMounts:
        - name: data
          mountPath: /root/.config/io.datasette.llm/
      volumes:
      - name: conf
        configMap:
          name: llm-cli-conf
      - name: data
        emptyDir: {}
