examples/big-agi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: big-agi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: big-agi
  template:
    metadata:
      labels:
        app: big-agi
    spec:
      containers:
      - name: big-agi
        image: ghcr.io/enricoros/big-agi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: big-agi-service
spec:
  type: NodePort
  selector:
    app: big-agi
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
