examples/testingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: whoami-deployment
spec:  
  replicas: 1  
  selector:   
    matchLabels:  
      app: whoami
  template: 
    metadata:
      labels: 
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:  
  name: whoami-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector: 
    app: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: whoami-ingress
spec:  
  rules:   
  - host: whoami.192.168.68.115.nip.io
    http:  
      paths:  
      - path: /  
        pathType: Exact 
        backend:     
          service:  
            name: whoami-service 
            port:  
              number: 80
